@@ -1,5 +1,9 @@
 2005-07-06  Tom Tromey  <tromey@redhat.com>
 
+	* gnu/testlet/java/io/InputStreamReader/hang.java: New file
+
+2005-07-06  Tom Tromey  <tromey@redhat.com>
+
 	* gnu/testlet/javax/swing/AbstractAction/setEnabled.java: Updated
 	'Uses'.
 
